--- a/index.html
+++ b/index.html
@@ -1,9 +1,44 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script type="text/javascript" src="properties.js"></script>
-    <script data-main="js/app.js" src="js/require.js"></script>
+    <meta charset="UTF-8">
+    <title>SurVis Literature Collection</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="js/jquery.min.js"></script>
+    <script src="js/d3.min.js"></script>
+    <script src="js/survis.js"></script>
+    <script src="data/generated/bib.js"></script>
+    <script src="data/authorized_tags.js"></script>
+    <script src="data/tag_categories.js"></script>
+    <script src="properties.js"></script>
 </head>
 <body>
+    <div>
+        <h1>SurVis Literature Collection</h1>
+        <p>Visit the <a href="http://localhost:8000" target="_blank">SurVis Literature Collection</a> for more information.</p>
+        <div id="vis"></div>
+        <div id="keywords">
+            <p>Keywords</p>
+            <p id="keywordsType">type: </p>
+        </div>
+    </div>
+
+    <script>
+        $(document).ready(function() {
+            SurVis.init({
+                title: title,
+                dataDir: dataDir,
+                jsDir: jsDir,
+                stylesDir: stylesDir,
+                tagCloudOptions: tagCloudOptions,
+                editable: editable,
+                paper: paper,
+                extraPages: extraPages,
+                customStyle: customStyle,
+                citations: citations
+            });
+            $('#keywordsType').text('type: ' + tagCloudOptions[0].title);
+        });
+    </script>
 </body>
 </html>
